--- a/style.css
+++ b/style.css
@@ -8,7 +8,20 @@
 textarea{
 	float:left !important;
 }
-textarea, select, button, input{
+select{
+    padding: 0px !important;
+    border: 1px solid #929497 !important;
+    border-radius: 0 !important;
+    color: #212121 !important;
+    font-size: 12px !important;
+    font-weight: normal !important;
+    width: 100% !important;
+    height:20px !important;
+    margin:10px !important;
+    font-family: Arial !important;
+    line-height: 1.0 !important;	
+}
+textarea, button, input{
     padding: 0px !important;
     border: 1px solid #929497 !important;
     border-radius: 0 !important;
